# gemini-nano-banana-tool

./: .gitignore  .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
gemini_nano_banana_tool/: __init__.py  cli.py  logging_config.py  utils.py
gemini_nano_banana_tool/commands/: __init__.py  generate_command.py  generate_conversation_command.py  list_commands.py  promptgen_command.py
gemini_nano_banana_tool/core/: __init__.py  client.py  conversation.py  generator.py  models.py  prompt_templates.py  promptgen.py
images/: prompt-flash-1-hero.txt  prompt-flash-2-terminal.txt  prompt-flash-3-creative.txt  prompt-pro-1-hero.txt  prompt-pro-2-terminal.txt  prompt-pro-3-creative.txt  test-4k-pro-prompt.txt
plugins/gemini-nano-banana-tool/.claude-plugin/: plugin.json
plugins/gemini-nano-banana-tool/commands/: completion.md  generate-conversation.md  generate.md  list-aspect-ratios.md  list-models.md  promptgen.md
plugins/gemini-nano-banana-tool/skills/gemini-nano-banana-tool/: SKILL.md
references/: README.md  api-setup-pricing.md  gemini-model-troubleshooting.md  prompting-guide.md  quick-reference.md  research-sources.md
references/references/: api-setup-pricing.md  env-setup.sh  model-features.md  prompting-guide.md
tests/: __init__.py  test_imagen_generator.py  test_promptgen_integration.py  test_utils.py
