[project]
name = "gemini-nano-banana-tool"
version = "2.0.0"
description = "A professional CLI for generating, editing, and manipulating images using Google's Gemini image generation models (Nano Banana & Nano Banana 2)"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.7",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
]
authors = [
    {name = "Dennis Vriend", email = "dvriend@ilionx.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "gemini",
    "image-generation",
    "ai",
    "cli",
    "generative-ai",
    "imagen",
    "google-ai",
    "text-to-image",
    "image-editing",
    "nano-banana",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dnvriend/gemini-nano-banana-tool"
Documentation = "https://github.com/dnvriend/gemini-nano-banana-tool#readme"
Repository = "https://github.com/dnvriend/gemini-nano-banana-tool"
Issues = "https://github.com/dnvriend/gemini-nano-banana-tool/issues"
Changelog = "https://github.com/dnvriend/gemini-nano-banana-tool/releases"

[project.scripts]
gemini-nano-banana-tool = "gemini_nano_banana_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "types-pillow>=10.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
strict = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used (common in tests)
